--- a/app/src/main/res/drawable/ic_wave.xml
+++ b/app/src/main/res/drawable/ic_wave.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="320">
   <path
       android:pathData="M0,224L80,229.3C160,235 320,245 480,224C640,203 800,149 960,128C1120,107 1280,117 1360,122.7L1440,128L1440,0L1360,0C1280,0 1120,0 960,0C800,0 640,0 480,0C320,0 160,0 80,0L0,0Z"
-      android:fillColor="#0099ff"/>
+      android:fillColor="#000"/>
 </vector>
