--- a/app/src/main/res/layout/list_adapter.xml
+++ b/app/src/main/res/layout/list_adapter.xml
@@ -11,7 +11,7 @@
         <TextView
             android:id="@+id/textViewAdapter"
             android:layout_width="300dp"
-            android:layout_height="75dp"
+            android:layout_height="wrap_content"
             android:text="TextView" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
