--- a/app/src/main/res/layout/activity_home_profesor_curso_estudiantes.xml
+++ b/app/src/main/res/layout/activity_home_profesor_curso_estudiantes.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeProfesorAddNotify">
+    tools:context=".HomeProfesorCursoEstudiantes">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
