--- a/app/src/main/res/layout/activity_home_profesor.xml
+++ b/app/src/main/res/layout/activity_home_profesor.xml
@@ -17,18 +17,28 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/text_view5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
-        android:text="BIENVENIDO : USER"
+        android:layout_marginTop="112dp"
+        android:text="BIENVENIDO : "
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/imageView3"
-        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintHorizontal_bias="0.346"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="USER"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/text_view5"
+        app:layout_constraintTop_toBottomOf="@+id/text_view5" />
 
     <ImageView
         android:id="@+id/imageView3"
