--- a/app/src/main/res/layout/activity_home_profesor_curso_estudiantes.xml
+++ b/app/src/main/res/layout/activity_home_profesor_curso_estudiantes.xml
@@ -7,7 +7,7 @@
     tools:context=".HomeProfesorCursoEstudiantes">
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_home_profesor_curso_estudiantes_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_home_profesor_curso_estudiantes_title" />
 
     <LinearLayout
         android:id="@+id/linerLayout1"
